--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ authors = ["Tom Burdick <thomas.burdick@gmail.com>"]
 [dependencies]
 hyper = "0.6"
 rustc-serialize = "0.3"
+scoped_threadpool = "0.1"
