Write out agency.txt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ authors = ["Tom Burdick <thomas.burdick@gmail.com>"]
 hyper = "0.6"
 rustc-serialize = "0.3"
 scoped_threadpool = "0.1"
+csv = "0.14"
