--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Tom Burdick <thomas.burdick@gmail.com>"]
 
 [dependencies]
 ansi_term = "0.7"
+rand = "0.3"
 clap = "2.2"
 csv = "0.14"
 env_logger = "0.3"
