--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,7 @@ hyper = "0.8"
 log = "0.3"
 rand = "0.3"
 rust-crypto = "0.2"
-rustc-serialize = "0.3"
 scoped_threadpool = "0.1"
+serde = "0.7"
+serde_json = "0.7"
+serde_macros = "0.7"
