--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ build = "build.rs"
 
 [features]
 default = ["serde_codegen"]
-nightly = ["serde_macros"]
+nightly = ["serde_macros", "clippy"]
 
 [build-dependencies]
 serde_codegen = { version = "0.7", optional = true }
@@ -25,3 +25,4 @@ scoped_threadpool = "0.1"
 serde = "0.7"
 serde_json = "0.7"
 serde_macros = { version = "0.7", optional = true }
+clippy = { version = "*", optional = true }
