--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ env_logger = "0.3"
 hyper = "0.9"
 log = "0.3"
 rand = "0.3"
-rust-crypto = "0.2"
+rust-crypto = "^0.2"
 scoped_threadpool = "0.1"
 serde = "0.7"
 serde_json = "0.7"
